# galaxy-morphology-classification

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md
docs/: project_overview.md
docs/acceptance/: exit_report.md  final_delivery_checklist.md
docs/data/: data_dictionary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md
notebooks/: README.md
reports/: README.md
reports/metrics/: baseline_cnn_metrics.json
scripts/data_acquisition/: main.py
scripts/eda/: main.py
scripts/evaluation/: main.py  offline.py
scripts/preprocessing/: main.py
scripts/training/: main.py
src/galaxy_morphology_classification/: __init__.py
src/galaxy_morphology_classification/database/: __init__.py
src/galaxy_morphology_classification/evaluation/: __init__.py
src/galaxy_morphology_classification/models/: __init__.py  model_efficient.py
src/galaxy_morphology_classification/preprocessing/: __init__.py
src/galaxy_morphology_classification/training/: __init__.py
src/galaxy_morphology_classification/visualization/: __init__.py
tests/: conftest.py  test_data_acquisition.py  test_eda.py  test_evaluation_utils.py  test_inference_api.py  test_preprocessing.py  test_training_protocol.py
